Fix footer guidestar image, align footer Sound Generations logo and nav links

--- a/wp-content/themes/sg24/style.css
+++ b/wp-content/themes/sg24/style.css
@@ -1793,8 +1793,7 @@ p#breadcrumbs {
 .page-header,
 .entry-footer {
   margin: 1.5em auto 0 auto;
-  max-width: 81.5rem;
-  padding-right: 1.5rem;
+  max-width: 90%;
 }
 
 .page-template-page-full .entry-content {
@@ -2353,6 +2352,7 @@ object {
   padding-left: 2rem;
   padding-right: 2rem;
   margin-bottom: 0rem;
+  margin-top: 2rem;
 }
 
 .footer a {
